--- a/app/src/main/res/layout/activity_kayit_ol.xml
+++ b/app/src/main/res/layout/activity_kayit_ol.xml
@@ -9,7 +9,7 @@
     android:gravity="center"
     android:id="@+id/kayit_ol_linear"
     android:orientation="vertical"
-    tools:context=".KayitOlActivity">
+    tools:context=".View.KayitOlActivity">
 
     <TextView
         android:layout_width="wrap_content"
