--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,4 +13,9 @@
      <color name="BottomViewSecilenRenk">#2196f3</color>
      <color name="BottomViewSecilmeyenRenk">#AAAAAA</color>
 
+    <!-- Custom Dialog Mesaj Gonder Renkler -->
+    <color name="MesajGonderCerceveRenk">#2196f3</color>
+    <color name="MesajGonderResimRenk">#1651cf</color>
+    <color name="MesajGonderBtnYazi">#1651cf</color>
+
 </resources>
