--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,4 +1,3 @@
-<<<<<<< HEAD
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -7,8 +6,13 @@
     android:layout_height="match_parent"
     tools:context=".View.MainActivity">
 
+    <include
+        layout="@layout/bar_layout"
+        android:id="@+id/toolbar"/>
+
     <FrameLayout
         android:layout_width="match_parent"
+        android:layout_below="@+id/toolbar"
         android:id="@+id/main_activity_frameLayout"
         android:layout_above="@+id/main_activity_bottomView"
         android:layout_height="match_parent"/>
@@ -23,25 +27,4 @@
         app:itemTextColor="@color/bottom_view_color"/>
 
 </RelativeLayout>
-=======
-<?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
 
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".View.MainActivity">
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-</androidx.constraintlayout.widget.ConstraintLayout>
->>>>>>> 80622fc2e916f0dad85781eed3fe42e7fdad345b
