--- a/app/src/main/res/layout/custom_dialog_mesaj_gonder.xml
+++ b/app/src/main/res/layout/custom_dialog_mesaj_gonder.xml
@@ -58,7 +58,7 @@
                  android:layout_width="45dp"
                  android:layout_height="45dp"
                  android:background="@drawable/custom_dialog_mesaj_gonder_btn_bg"
-                 android:src="@drawable/ic_message2"/>
+                 android:src="@drawable/ic_baseline_message"/>
 
              <TextView
                  android:layout_width="wrap_content"
@@ -69,8 +69,8 @@
                  android:textSize="11dp"/>
 
      </LinearLayout>
-
      </LinearLayout>
+
     </RelativeLayout>
 
     <de.hdodenhof.circleimageview.CircleImageView
@@ -80,5 +80,16 @@
         android:layout_centerHorizontal="true"
         app:civ_border_width="3dp"
         app:civ_border_color="@color/MesajGonderCerceveRenk"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textStyle="bold"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="2dp"
+        android:layout_below="@+id/custom_dialog_mesaj_gonder_imgKullaniciProfil"
+        android:id="@+id/custom_dialog_mesaj_gonder_txtKullaniciIsim"
+        android:textSize="15sp"
+        android:textColor="@color/kayitOlTextColor"/>
 
 </RelativeLayout>
