--- a/app/src/main/res/layout/kullanici_item.xml
+++ b/app/src/main/res/layout/kullanici_item.xml
@@ -38,7 +38,7 @@
             android:layout_alignParentRight="true"
             android:layout_alignParentEnd="true"
             android:layout_centerVertical="true"
-            android:src="@drawable/ic_sag_yon"
+            android:src="@drawable/ic_yon_sag"
             android:id="@+id/kullanici_item_imgSagYon"/>
 
     </RelativeLayout>
