--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,36 +1,17 @@
-<<<<<<< HEAD
 <resources>
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
-        <!--<style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar"> -->
+   <!--  <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar"> -->
+        <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Customize your theme here. -->
-        <!-- <item name="android:windowNoTitle">true</item>
-        <item name="android:windowFullscreen">true</item> -->
-        <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-        <item name="colorAccent">@color/colorAccent</item>
+            <item name="android:windowNoTitle">true</item>
+            <item name="android:windowFullscreen">true</item>
+          <item name="colorPrimary">@color/colorPrimary</item>
+          <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
+          <item name="colorAccent">@color/colorAccent</item>
     </style>
 
     <style name="CounterStyle" parent="TextAppearance.AppCompat.Small">
         <item name="android:textColor">@android:color/black</item>
         <item name="android:textStyle">normal</item>
     </style>
-
-
-=======
-<resources>
-    <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
-        <!-- Customize your theme here. -->
-        <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-        <item name="colorAccent">@color/colorAccent</item>
-        <item name="android:windowNoTitle">true</item>
-        <item name="android:windowFullscreen">true</item>
-        <item name="android:windowActionBar">false</item>
-    </style>
-
-
-
->>>>>>> 80622fc2e916f0dad85781eed3fe42e7fdad345b
 </resources>
