--- a/app/src/main/res/layout/kullanici_item.xml
+++ b/app/src/main/res/layout/kullanici_item.xml
@@ -16,7 +16,17 @@
             android:layout_height="66dp"
             android:id="@+id/kullanici_item_imgKullaniciProfil"
             app:civ_border_width="3dp"
-            app:civ_border_color="@android:color/black"/>
+            app:civ_border_color="#2196f3"/>
+
+        <ImageView
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:src="@drawable/kullanici_cevrimici_bg"
+            android:layout_marginRight="2dp"
+            android:id="@+id/kullanici_item_imgOnline"
+            android:layout_marginTop="2dp"
+            android:layout_alignTop="@+id/kullanici_item_imgKullaniciProfil"
+            android:layout_alignRight="@id/kullanici_item_imgKullaniciProfil"/>
 
         <TextView
             android:layout_width="wrap_content"
@@ -38,7 +48,7 @@
             android:layout_alignParentRight="true"
             android:layout_alignParentEnd="true"
             android:layout_centerVertical="true"
-            android:src="@drawable/ic_sag_yon"
+            android:src="@drawable/ic_yon_sag"
             android:id="@+id/kullanici_item_imgSagYon"/>
 
     </RelativeLayout>
